# stm32f030-troubleshooting

./: APACHE2.0  Cargo.toml  MIT  memory.x
.cargo/: config.toml
src/: main.rs
