[package]
edition = "2021"
name = "stm32-project-template"
version = "0.1.0"
license = "MIT OR Apache-2.0"

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
#cortex-m-semihosting = "0.5"
panic-halt = "0.2"

stm32f0xx-hal = { version = "0.18", features = ["stm32f030x6", "rt"] }

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
